java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementEnumMethods.pass
package org.netbeans.test.java.hints;

/**
 *
 * @author sdedic
 */
public class ImplementEnumMethods {
    enum E {
        ONE {
            @Override
            public String kuk() {
                throw new UnsupportedOperationException("Not supported yet.");
            }
        }, TWO {
            @Override
            public String kuk() {
                throw new UnsupportedOperationException("Not supported yet.");
            }
        }, THREE {
            @Override
            public String kuk() {
                throw new UnsupportedOperationException("Not supported yet.");
            }
        };
        
        public abstract String kuk();
    }
    
}
